--- a/.htaccess
+++ b/.htaccess
@@ -2,11 +2,11 @@
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /aptana/Two_on_wp/
+RewriteBase /
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /aptana/Two_on_wp/index.php [L]
+RewriteRule . /index.php [L]
 </IfModule>
 
 # END WordPress
